[AX][GTK] No new lines in some AX tests output https://bugs.webkit.org/show_bug.cgi?id=131294

Reviewed by Martin Robinson.

Source/WebCore:

Do not implement Hypetext or AtkText for the WebArea. Those
interfaces will be implemented by the containers (automatically
generated or not) for the different parts of the DOM and the
render subtree under this element anyway.

* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(getInterfaceMaskFromObject): Make sure we don't apply
WAIHypertext nor WAIText to objects with role WebAreaRole.

LayoutTests:

Removed failure expectations for tests now passing.

* platform/gtk/TestExpectations: Updated.

Canonical link: https://commits.webkit.org/149496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167011 268f45cc-cd09-0410-ab3c-d52691b4dbfc